# Audio-LLM

./: .gitignore  README.md  pyproject.toml
data/processed/: test.json  train.json  valid.json
data/processed/features/: feat_0.npy  feat_1.npy  feat_10.npy  feat_100.npy  feat_101.npy  feat_102.npy  feat_103.npy  feat_104.npy  feat_105.npy  feat_106.npy  feat_107.npy  feat_108.npy  feat_109.npy  feat_11.npy  feat_110.npy  feat_111.npy  feat_112.npy  feat_113.npy  feat_114.npy  feat_115.npy  feat_116.npy  feat_117.npy  feat_118.npy  feat_119.npy  feat_12.npy  feat_120.npy  feat_121.npy  feat_122.npy  feat_123.npy  feat_124.npy  feat_125.npy  feat_126.npy  feat_127.npy  feat_128.npy  feat_129.npy  feat_13.npy  feat_130.npy  feat_131.npy  feat_132.npy  feat_133.npy  (+455 more)
scripts/: evaluate.py  inference.py  merge.py  process_chiser5.py  train.py
src/: config.py  dataset.py  model.py
