[project]
name = "audio-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "addict>=2.4.0",
    "datasets>=3.0.0,<=3.6.0",
    "librosa>=0.11.0",
    "modelscope>=1.32.0",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pillow>=12.0.0",
    "simplejson>=3.20.2",
    "sortedcontainers>=2.4.0",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "transformers>=4.57.3",
]
